[gd_scene load_steps=13 format=3 uid="uid://dguvb3qh2877f"]

[ext_resource type="Script" uid="uid://rdkdigmyx4bp" path="res://Scenes/Gameplay/enemy.gd" id="1_kqmod"]
[ext_resource type="Texture2D" uid="uid://b7xew4vsdprnk" path="res://Assets/Sprites/Debit/Ennemies/Alien1.png" id="1_vgurf"]
[ext_resource type="Texture2D" uid="uid://q1bqjxmsn60r" path="res://Assets/Sprites/Debit/Ennemies/Alien2.png" id="2_kqmod"]
[ext_resource type="Texture2D" uid="uid://dnriayrq1v44h" path="res://Assets/Sprites/Debit/Ennemies/Alien3.png" id="3_qhqle"]
[ext_resource type="Texture2D" uid="uid://cp6ban3fiew4o" path="res://Assets/Sprites/Debit/Ennemies/Alien4.png" id="4_pw261"]
[ext_resource type="Texture2D" uid="uid://bahcat4mj2vlh" path="res://Assets/Sprites/Debit/Ennemies/Alien5.png" id="5_rs6j2"]
[ext_resource type="Texture2D" uid="uid://cu016t1hievx6" path="res://Assets/Sprites/Debit/Ennemies/Alien6.png" id="6_0n578"]
[ext_resource type="Texture2D" uid="uid://d2mnv0vd8k8bd" path="res://Assets/Sprites/Debit/Ennemies/Alien7.png" id="7_sj55t"]
[ext_resource type="Texture2D" uid="uid://f5bdt1m7gr32" path="res://Assets/Sprites/Debit/Ennemies/Alien8.png" id="8_un1pk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jntje"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vgurf")
}, {
"duration": 1.0,
"texture": ExtResource("2_kqmod")
}, {
"duration": 1.0,
"texture": ExtResource("3_qhqle")
}, {
"duration": 1.0,
"texture": ExtResource("4_pw261")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_rs6j2")
}, {
"duration": 1.0,
"texture": ExtResource("6_0n578")
}, {
"duration": 1.0,
"texture": ExtResource("7_sj55t")
}, {
"duration": 1.0,
"texture": ExtResource("8_un1pk")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysr33"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yvcfn"]
radius = 143.136

[node name="enemy" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_kqmod")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -4)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jntje")
animation = &"walk"
autoplay = "idle"
frame_progress = 0.151162

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 12)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_ysr33")
debug_color = Color(0.0800972, 0.557667, 0.885288, 0.42)

[node name="move_limite" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="move_limite"]
position = Vector2(-2, 12)
shape = SubResource("CircleShape2D_yvcfn")
debug_color = Color(0.958509, 0.173871, 0.281118, 0.42)

[node name="cible" type="Marker2D" parent="."]
position = Vector2(-3, 12)

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="area_entered" from="move_limite" to="." method="_on_move_limite_area_entered"]
[connection signal="area_entered" from="move_limite" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="move_limite" to="." method="_on_move_limite_body_entered"]
[connection signal="body_exited" from="move_limite" to="." method="_on_move_limite_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
